--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   chewie: ^1.11.3
   photo_view: ^0.15.0
   flutter_launcher_icons: ^0.14.3
+  animated_custom_dropdown: ^3.1.1
+  google_nav_bar: ^5.0.7
 
 dev_dependencies:
   flutter_test:
