--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   auto_size_text: ^3.0.0
   connectivity_plus: ^6.1.4
+  quickalert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
