--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   auto_size_text: ^3.0.0
   connectivity_plus: ^6.1.4
   quickalert: ^1.1.0
+  flutter_local_notifications: ^19.1.0
 
 dev_dependencies:
   flutter_test:
