--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   quickalert: ^1.1.0
   flutter_local_notifications: ^19.1.0
   package_info_plus: ^8.3.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
