--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   package_info_plus: ^8.3.0
   shared_preferences: ^2.5.3
   audioplayers: ^6.4.0
+  flutter_staggered_animations: ^1.1.1
+  get_thumbnail_video: ^0.7.3
 
 dev_dependencies:
   flutter_test:
