--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
     <application
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true"
         android:theme="@style/LaunchTheme">
         <activity
             android:name=".MainActivity"
@@ -53,6 +54,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+            android:name="com.onesignal.NotificationIcon"
+            android:resource="@mipmap/ic_launcher"/>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBCZvyqX4bFC7Zr8aLVIehq2SgjpI17_3M" />
