--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   audioplayers: ^6.4.0
   flutter_staggered_animations: ^1.1.1
   get_thumbnail_video: ^0.7.3
+  flutter_floating_bottom_bar: ^1.3.0
+  app_settings: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -84,3 +86,4 @@ flutter:
     - assets/penggunaan/request4.png
     - assets/penggunaan/service.png
     - assets/sounds/notifikasi_planning.mp3
+    - assets/images/background.png
