--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   get_thumbnail_video: ^0.7.3
   flutter_floating_bottom_bar: ^1.3.0
   app_settings: ^6.1.1
+  marquee: ^2.3.0
+  dotted_line: ^3.2.3
 
 dev_dependencies:
   flutter_test:
